--- a/src/assets/styles/layout/_marketing.sass
+++ b/src/assets/styles/layout/_marketing.sass
@@ -87,7 +87,7 @@
       height: 40%
       bottom: 0
       left: 0
-      background-image: linear-gradient(transparent, $primary-color-contrast)
+      background-image: linear-gradient(rgba(255, 255, 255, 0), $primary-color-contrast) // transparent white right than `transparent` keyword cause safari treats `transparent` as transparent black so gradient is ugly
 
 
   .summary--small
